--- a/view/templets/home/user/common_left.html
+++ b/view/templets/home/user/common_left.html
@@ -5,30 +5,30 @@
         <div class="yiji">交易管理</div>
         <ul class="list_menu">
             <li><a href="">我的订单</a></li>
-            <li><a href="vip_shoucang">我的收藏</a></li>
-            <li><a href="vip_jifen">我的积分</a></li>
-            <li><a href="vip_shaidan">我的晒单</a></li>
-            <li><a href="vip_yuyue">我的预约</a></li>
+            <li><a href="/home/user/vip_shoucang">我的收藏</a></li>
+            <li><a href="/home/user/vip_jifen">我的积分</a></li>
+            <li><a href="/home/user/vip_shaidan">我的晒单</a></li>
+            <li><a href="/home/user/xvip_yuyue">我的预约</a></li>
         </ul>
     </li>
     <li>
         <div class="yiji">会员中心</div>
         <ul class="list_menu">
-            <li><a href="vip_GRziliao">个人资料</a></li>
-            <li><a href="vip_anquan">帐号安全</a></li>
-            <li><a href="vip_anquan_xiugai_mima">修改密码</a></li>
-            <li><a href="vip_ziliao">会员资料</a></li>
-            <li><a href="vip_dizhi">我的地址</a></li>
-            <li><a href="vip_guanzhu">我的关注</a></li>
-            <li><a href="vip_toupiao">我的投票</a></li>
+            <li><a href="/home/user/vip_GRziliao">个人资料</a></li>
+            <li><a href="/home/user/vip_anquan">帐号安全</a></li>
+            <li><a href="/home/user/vip_anquan_xiugai_mima">修改密码</a></li>
+            <li><a href="/home/user/vip_ziliao">会员资料</a></li>
+            <li><a href="/home/user/vip_dizhi">我的地址</a></li>
+            <li><a href="/home/user/vip_guanzhu">我的关注</a></li>
+            <li><a href="/home/user/vip_toupiao">我的投票</a></li>
         </ul>
     </li>
     <li>
         <div class="yiji">服务中心</div>
         <ul class="list_menu">
-            <li><a href="vip_tuikuan">退款申请</a></li>
-            <li><a href="vip_fanxiu">返修/换货</a></li>
-            <li><a href="vip_tousu">投拆建议</a></li>
+            <li><a href="/home/user/vip_tuikuan">退款申请</a></li>
+            <li><a href="/home/user/vip_fanxiu">返修/换货</a></li>
+            <li><a href="/home/user/vip_tousu">投拆建议</a></li>
         </ul>
     </li>
 </ul>
