--- a/view/templets/home/user/vip_fanxiu.html
+++ b/view/templets/home/user/vip_fanxiu.html
@@ -61,11 +61,80 @@ $(function(){
             <!--	<input type="file">-->
 
                 <ul class="baaaa">
-                    <li><img src="<{$templets}>/index/images/xiazai.png"></li>
-                    <li><img src="<{$templets}>/index/images/xiazai.png"></li>
-                    <li><img src="<{$templets}>/index/images/xiazai.png"></li>
-                    <li><img src="<{$templets}>/index/images/xiazai.png"></li>
 
+                    <li style="position: relative"><img id="ImgPr" src="<{$templets}>/index/images/xiazai.png"><input type="file" id="#up" style="display:block;width:80px;height:58px;position: absolute;left:0;top:0; filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0);
+filter:alpha(opacity=0);-moz-opacity:0;-khtml-opacity: 0;opacity:0;background: none;border: none;"></li>
+                    <li style="position: relative"><img id="ImgPr" src="<{$templets}>/index/images/xiazai.png"><input type="file" id="#up" style="display:block;width:80px;height:58px;position: absolute;left:0;top:0; filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0);
+filter:alpha(opacity=0);-moz-opacity:0;-khtml-opacity: 0;opacity:0;background: none;border: none;"></li>
+                    <li style="position: relative"><img id="ImgPr" src="<{$templets}>/index/images/xiazai.png"><input type="file" id="#up" style="display:block;width:80px;height:58px;position: absolute;left:0;top:0; filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0);
+filter:alpha(opacity=0);-moz-opacity:0;-khtml-opacity: 0;opacity:0;background: none;border: none;"></li>
+                    <li style="position: relative"><img id="ImgPr" src="<{$templets}>/index/images/xiazai.png"><input type="file" id="#up" style="display:block;width:80px;height:58px;position: absolute;left:0;top:0; filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0);
+filter:alpha(opacity=0);-moz-opacity:0;-khtml-opacity: 0;opacity:0;background: none;border: none;"></li>
+<script>
+    $("#up").uploadPreview({ Img: "#ImgPr", Width: 120, Height: 120, ImgType: ["gif", "jpeg", "jpg", "bmp", "png"], Callback: function () { }});
+</script>
+<script type="text/javascript">
+    jQuery.fn.extend({
+        uploadPreview: function (opts) {
+            var _self = this,
+                    _this = $(this);
+            opts = jQuery.extend({
+                Img: "ImgPr",
+                Width: 100,
+                Height: 100,
+                ImgType: ["gif", "jpeg", "jpg", "bmp", "png"],
+                Callback: function () {}
+            }, opts || {});
+            _self.getObjectURL = function (file) {
+                var url = null;
+                if (window.createObjectURL != undefined) {
+                    url = window.createObjectURL(file)
+                } else if (window.URL != undefined) {
+                    url = window.URL.createObjectURL(file)
+                } else if (window.webkitURL != undefined) {
+                    url = window.webkitURL.createObjectURL(file)
+                }
+                return url
+            };
+            _this.change(function () {
+                if (this.value) {
+                    if (!RegExp("\.(" + opts.ImgType.join("|") + ")$", "i").test(this.value.toLowerCase())) {
+                        alert("选择文件错误,图片类型必须是" + opts.ImgType.join("，") + "中的一种");
+                        this.value = "";
+                        return false
+                    }
+                    if ($.browser.msie) {
+                        try {
+                            $("#" + opts.Img).attr('src', _self.getObjectURL(this.files[0]))
+                        } catch (e) {
+                            var src = "";
+                            var obj = $("#" + opts.Img);
+                            var div = obj.parent("div")[0];
+                            _self.select();
+                            if (top != self) {
+                                window.parent.document.body.focus()
+                            } else {
+                                _self.blur()
+                            }
+                            src = document.selection.createRange().text;
+                            document.selection.empty();
+                            obj.hide();
+                            obj.parent("div").css({
+                                'filter': 'progid:DXImageTransform.Microsoft.AlphaImageLoader(sizingMethod=scale)',
+                                'width': opts.Width + 'px',
+                                'height': opts.Height + 'px'
+                            });
+                            div.filters.item("DXImageTransform.Microsoft.AlphaImageLoader").src = src
+                        }
+                    } else {
+                        $("#" + opts.Img).attr('src', _self.getObjectURL(this.files[0]))
+                    }
+                    opts.Callback()
+                }
+            })
+        }
+    });
+</script>
                 </ul>
 
                 <div class="jiejue">为了帮助我们更好的解决问题，请您上传图片<br><span>最多可上传5张图片，每张图片大小不超过5M，支持bmp,gif,jpg,png,jpeg格式文件</span></div>
