--- a/view/templets/home/user/vip_fanxiu.html
+++ b/view/templets/home/user/vip_fanxiu.html
@@ -62,79 +62,16 @@ $(function(){
 
                 <ul class="baaaa">
 
-                    <li style="position: relative"><img id="ImgPr" src="<{$templets}>/index/images/xiazai.png"><input type="file" id="#up" style="display:block;width:80px;height:58px;position: absolute;left:0;top:0; filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0);
+                    <li style="position: relative"><input id="img_url0" type="hidden" name="backpic" value=""><img id="ImgPr0" src="<{$templets}>/index/images/xiazai.png"><input type="file" id="up0" style="display:block;width:80px;height:58px;position: absolute;left:0;top:0; filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0);
 filter:alpha(opacity=0);-moz-opacity:0;-khtml-opacity: 0;opacity:0;background: none;border: none;"></li>
-                    <li style="position: relative"><img id="ImgPr" src="<{$templets}>/index/images/xiazai.png"><input type="file" id="#up" style="display:block;width:80px;height:58px;position: absolute;left:0;top:0; filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0);
+                    <li style="position: relative"><input id="img_url1" type="hidden" name="backpic2" value=""><img id="ImgPr1" src="<{$templets}>/index/images/xiazai.png"><input type="file" id="up1" style="display:block;width:80px;height:58px;position: absolute;left:0;top:0; filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0);
 filter:alpha(opacity=0);-moz-opacity:0;-khtml-opacity: 0;opacity:0;background: none;border: none;"></li>
-                    <li style="position: relative"><img id="ImgPr" src="<{$templets}>/index/images/xiazai.png"><input type="file" id="#up" style="display:block;width:80px;height:58px;position: absolute;left:0;top:0; filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0);
+                    <li style="position: relative"><input id="img_url2" type="hidden" name="backpic3" value=""><img id="ImgPr2" src="<{$templets}>/index/images/xiazai.png"><input type="file" id="up2" style="display:block;width:80px;height:58px;position: absolute;left:0;top:0; filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0);
 filter:alpha(opacity=0);-moz-opacity:0;-khtml-opacity: 0;opacity:0;background: none;border: none;"></li>
-                    <li style="position: relative"><img id="ImgPr" src="<{$templets}>/index/images/xiazai.png"><input type="file" id="#up" style="display:block;width:80px;height:58px;position: absolute;left:0;top:0; filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0);
+                    <li style="position: relative"><input id="img_url3" type="hidden" name="backpic4" value=""><img id="ImgPr3" src="<{$templets}>/index/images/xiazai.png"><input type="file" id="up3" style="display:block;width:80px;height:58px;position: absolute;left:0;top:0; filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0);
 filter:alpha(opacity=0);-moz-opacity:0;-khtml-opacity: 0;opacity:0;background: none;border: none;"></li>
-<script>
-    $("#up").uploadPreview({ Img: "#ImgPr", Width: 120, Height: 120, ImgType: ["gif", "jpeg", "jpg", "bmp", "png"], Callback: function () { }});
-</script>
-<script type="text/javascript">
-    jQuery.fn.extend({
-        uploadPreview: function (opts) {
-            var _self = this,
-                    _this = $(this);
-            opts = jQuery.extend({
-                Img: "ImgPr",
-                Width: 100,
-                Height: 100,
-                ImgType: ["gif", "jpeg", "jpg", "bmp", "png"],
-                Callback: function () {}
-            }, opts || {});
-            _self.getObjectURL = function (file) {
-                var url = null;
-                if (window.createObjectURL != undefined) {
-                    url = window.createObjectURL(file)
-                } else if (window.URL != undefined) {
-                    url = window.URL.createObjectURL(file)
-                } else if (window.webkitURL != undefined) {
-                    url = window.webkitURL.createObjectURL(file)
-                }
-                return url
-            };
-            _this.change(function () {
-                if (this.value) {
-                    if (!RegExp("\.(" + opts.ImgType.join("|") + ")$", "i").test(this.value.toLowerCase())) {
-                        alert("选择文件错误,图片类型必须是" + opts.ImgType.join("，") + "中的一种");
-                        this.value = "";
-                        return false
-                    }
-                    if ($.browser.msie) {
-                        try {
-                            $("#" + opts.Img).attr('src', _self.getObjectURL(this.files[0]))
-                        } catch (e) {
-                            var src = "";
-                            var obj = $("#" + opts.Img);
-                            var div = obj.parent("div")[0];
-                            _self.select();
-                            if (top != self) {
-                                window.parent.document.body.focus()
-                            } else {
-                                _self.blur()
-                            }
-                            src = document.selection.createRange().text;
-                            document.selection.empty();
-                            obj.hide();
-                            obj.parent("div").css({
-                                'filter': 'progid:DXImageTransform.Microsoft.AlphaImageLoader(sizingMethod=scale)',
-                                'width': opts.Width + 'px',
-                                'height': opts.Height + 'px'
-                            });
-                            div.filters.item("DXImageTransform.Microsoft.AlphaImageLoader").src = src
-                        }
-                    } else {
-                        $("#" + opts.Img).attr('src', _self.getObjectURL(this.files[0]))
-                    }
-                    opts.Callback()
-                }
-            })
-        }
-    });
-</script>
+
+
                 </ul>
 
                 <div class="jiejue">为了帮助我们更好的解决问题，请您上传图片<br><span>最多可上传5张图片，每张图片大小不超过5M，支持bmp,gif,jpg,png,jpeg格式文件</span></div>
@@ -142,9 +79,9 @@ filter:alpha(opacity=0);-moz-opacity:0;-khtml-opacity: 0;opacity:0;background: n
         </div>
         <div class="tititi"><input type="submit" id="chengnuo1" value="提交申请"></div>
       </form>
-        
-        
-        
+
+
+
         <div class="fanxiu">我的返修</div>
         <table width="750" border="1" cellspacing="0" cellpadding="0" class="shenqingTK">
           <tr>
@@ -180,6 +117,42 @@ filter:alpha(opacity=0);-moz-opacity:0;-khtml-opacity: 0;opacity:0;background: n
 
 <{include file="common_foot.html"}>
 
+<script type="text/javascript" src="<{$url}>/public/uploadify/jquery.uploadify.min.js"></script>
+<script type="text/javascript">
+    $(function() {
 
+        //for(var i=0;i<4;i++) {
+            $('up0').uploadify({
+
+                //'debug' : true,
+                'buttonText': '上传',
+                // 'width':'130',
+                // 'height':'40',
+                //'buttonImage':'<{$templets}>/images/sc_03_06.jpg',
+                'queueID': 'some_file_queue',//取消上传进度显示
+                'swf': "<{$url}>/public/uploadify/uploadify.swf",
+                'uploader': "<{$url}>/index.php/home/index/upload_img",
+                'onFallback': function () {
+                    alert("您未安装FLASH控件，无法上传图片！请安装FLASH控件后再试。");
+                },
+                "onUploadSuccess": function (file, data, response) {
+                    if (data != -1) {
+                        console.log(file);
+                        data = data.replace(/\s/g, "");
+                        $('#ImgPr0').attr('src', "/uploads/avatar/" + data);
+                        $('#img_url0').val("/uploads/avatar/" + data);
+                        // $.post("<{$url}>/index.php/home/index/do_save_avatar",{str:data},function(){
+                        //   alert('修改成功');
+                        // });
+
+                    } else {
+                        alert('上传失败，请重新上传');
+                    }
+                }
+                // Put your options here
+            });
+       // }
+    });
+</script>
 
 
